--- a/CSharpBible/Games/VTileEdit.WPF/Views/Controls/TileEditorView.xaml
+++ b/CSharpBible/Games/VTileEdit.WPF/Views/Controls/TileEditorView.xaml
@@ -47,7 +47,12 @@
                                 <Button Style="{StaticResource GlyphButtonStyle}"
                                         Command="{Binding DataContext.SelectGlyphCommand, RelativeSource={RelativeSource AncestorType=UserControl}}"
                                         CommandParameter="{Binding}">
-                                    <TextBlock Text="{Binding Character}" FontFamily="Consolas" FontSize="16" HorizontalAlignment="Center" VerticalAlignment="Center" Foreground="{Binding ForegroundBrush}" />
+                                    <TextBlock Text="{Binding Character}"
+                                               FontFamily="{Binding DataContext.SelectedFontFamily, RelativeSource={RelativeSource AncestorType=UserControl}}"
+                                               FontSize="16"
+                                               HorizontalAlignment="Center"
+                                               VerticalAlignment="Center"
+                                               Foreground="{Binding ForegroundBrush}" />
                                 </Button>
                             </Border>
                         </DataTemplate>
@@ -67,7 +72,11 @@
                     <RowDefinition Height="Auto" />
                 </Grid.RowDefinitions>
                 <TextBlock Text="{x:Static properties:Strings.GlyphCharacterLabel}" Margin="0,0,12,8" VerticalAlignment="Center" />
-                <TextBox Grid.Column="1" Text="{Binding SelectedGlyph.CharacterText, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}" FontFamily="Consolas" FontSize="16" HorizontalContentAlignment="Center" />
+                <TextBox Grid.Column="1"
+                         Text="{Binding SelectedGlyph.CharacterText, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}"
+                         FontFamily="{Binding SelectedFontFamily}"
+                         FontSize="16"
+                         HorizontalContentAlignment="Center" />
                 <TextBlock Grid.Row="1" Text="{x:Static properties:Strings.GlyphForegroundLabel}" Margin="0,0,12,8" VerticalAlignment="Center" />
                 <ComboBox Grid.Row="1"
                           Grid.Column="1"
