Add tile list filtering and UI improvements
Added a filter textbox above the tile list, allowing users to filter tiles by name. Introduced a filtered view (TilesView) in the ViewModel, which updates automatically when the filter text changes. The tile list now uses a WrapPanel for better layout and binds glyph font to the selected font family. Added resource strings for "Font" and "Filter" labels and updated XAML to use them. The font selector label in the main window is now localized.

--- a/CSharpBible/Games/VTileEdit.WPF/Views/Controls/TileListView.xaml
+++ b/CSharpBible/Games/VTileEdit.WPF/Views/Controls/TileListView.xaml
@@ -5,16 +5,33 @@
              xmlns:properties="clr-namespace:VTileEdit.WPF.Properties"
              xmlns:vm="clr-namespace:VTileEdit.WPF.ViewModels">
     <GroupBox Header="{x:Static properties:Strings.TileListHeader}">
-        <DockPanel>
-            <TextBlock Text="{x:Static properties:Strings.TileListHint}"
+        <Grid>
+            <Grid.RowDefinitions>
+                <RowDefinition Height="Auto" />
+                <RowDefinition Height="Auto" />
+                <RowDefinition Height="*" />
+            </Grid.RowDefinitions>
+            <TextBlock Grid.Row="0"
+                       Text="{x:Static properties:Strings.TileListHint}"
                        Margin="0,0,0,8"
                        Foreground="Gray" />
-            <ListBox ItemsSource="{Binding Tiles}"
+            <DockPanel Grid.Row="1" Margin="0,0,0,8">
+                <TextBlock Text="{x:Static properties:Strings.TileListFilterLabel}" VerticalAlignment="Center" Margin="0,0,8,0" />
+                <TextBox Width="200"
+                         Text="{Binding TileFilterText, UpdateSourceTrigger=PropertyChanged}" />
+            </DockPanel>
+            <ListBox Grid.Row="2"
+                     ItemsSource="{Binding TilesView}"
                      SelectedItem="{Binding SelectedTile}"
-                     DockPanel.Dock="Bottom">
+                     ScrollViewer.VerticalScrollBarVisibility="Auto">
+                <ListBox.ItemsPanel>
+                    <ItemsPanelTemplate>
+                        <WrapPanel Orientation="Vertical" />
+                    </ItemsPanelTemplate>
+                </ListBox.ItemsPanel>
                 <ListBox.ItemTemplate>
                     <DataTemplate DataType="{x:Type vm:TileViewModel}">
-                        <StackPanel>
+                        <StackPanel Width="140" Margin="0,0,8,8">
                             <TextBlock Text="{Binding DisplayName}" FontWeight="Bold" />
                             <ItemsControl ItemsSource="{Binding Glyphs}">
                                 <ItemsControl.ItemsPanel>
@@ -31,7 +48,7 @@
                                                        Foreground="{Binding ForegroundBrush}"
                                                        HorizontalAlignment="Center"
                                                        VerticalAlignment="Center"
-                                                       FontFamily="Consolas"
+                                                       FontFamily="{Binding DataContext.SelectedFontFamily, RelativeSource={RelativeSource AncestorType=Window}}"
                                                        FontSize="10" />
                                         </Border>
                                     </DataTemplate>
@@ -41,6 +58,6 @@
                     </DataTemplate>
                 </ListBox.ItemTemplate>
             </ListBox>
-        </DockPanel>
+        </Grid>
     </GroupBox>
 </UserControl>
