--- a/CSharpBible/Games/VTileEdit.WPF/Views/MainWindow.xaml
+++ b/CSharpBible/Games/VTileEdit.WPF/Views/MainWindow.xaml
@@ -48,7 +48,7 @@
                     <RowDefinition Height="Auto" />
                 </Grid.RowDefinitions>
                 <StackPanel Grid.Row="0" Orientation="Horizontal" Margin="0,0,0,8" VerticalAlignment="Center">
-                    <TextBlock Text="Schriftart:" VerticalAlignment="Center" Margin="0,0,8,0" />
+                    <TextBlock Text="{x:Static properties:Strings.FontSelectorLabel}" VerticalAlignment="Center" Margin="0,0,8,0" />
                     <ComboBox Width="220"
                               ItemsSource="{Binding AvailableFontFamilies}"
                               SelectedItem="{Binding SelectedFontFamily}"
