--- a/CSharpBible/Games/VTileEdit.WPF/Views/MainWindow.xaml
+++ b/CSharpBible/Games/VTileEdit.WPF/Views/MainWindow.xaml
@@ -34,7 +34,65 @@
                 <ColumnDefinition Width="5" />
                 <ColumnDefinition Width="*" />
             </Grid.ColumnDefinitions>
-            <controls:TileListView Grid.Column="0" Margin="5" FontFamily="{Binding SelectedFontFamily}" />
+            <Grid Grid.Column="0" Margin="5">
+                <Grid.RowDefinitions>
+                    <RowDefinition Height="Auto" />
+                    <RowDefinition Height="*" />
+                </Grid.RowDefinitions>
+                <Expander Grid.Row="0"
+                          Header="{x:Static properties:Strings.TileSetDetailsHeader}"
+                          Margin="0,0,0,8"
+                          IsExpanded="True">
+                    <StackPanel Margin="0,4,0,0">
+                        <Grid>
+                             <Grid.ColumnDefinitions>
+                                 <ColumnDefinition Width="Auto" />
+                                 <ColumnDefinition Width="*" />
+                             </Grid.ColumnDefinitions>
+                             <Grid.RowDefinitions>
+                                 <RowDefinition Height="Auto" />
+                                 <RowDefinition Height="Auto" />
+                                 <RowDefinition Height="Auto" />
+                             </Grid.RowDefinitions>
+                             <TextBlock Grid.Column="0"
+                                        Text="{x:Static properties:Strings.TileSetNameLabel}"
+                                        Margin="0,0,8,8"
+                                        VerticalAlignment="Center" />
+                             <TextBox Grid.Column="1"
+                                      Text="{Binding TileSetNameInput, UpdateSourceTrigger=PropertyChanged}"
+                                      Margin="0,0,12,8" />
+                             <TextBlock Grid.Column="0"
+                                        Grid.Row="1"
+                                        Text="{x:Static properties:Strings.TileSetWidthLabel}"
+                                        Margin="0,0,8,8"
+                                        VerticalAlignment="Center" />
+                             <TextBox Grid.Column="1"
+                                        Grid.Row="1"
+                                        Width="80"
+                                        Text="{Binding TileSetTileWidthInput, UpdateSourceTrigger=PropertyChanged}"
+                                        Margin="0,0,12,8" />
+                             <TextBlock Grid.Column="0"
+                                        Grid.Row="2"
+                                        Text="{x:Static properties:Strings.TileSetHeightLabel}"
+                                        Margin="0,0,8,0"
+                                        VerticalAlignment="Center" />
+                             <TextBox Grid.Column="1"
+                                        Grid.Row="2"
+                                        Width="80"
+                                        Text="{Binding TileSetTileHeightInput, UpdateSourceTrigger=PropertyChanged}" />
+                        </Grid>
+                        <TextBlock Text="{x:Static properties:Strings.TileSetApplyWarning}"
+                                   TextWrapping="Wrap"
+                                   Margin="0,8,0,8"
+                                   Foreground="DarkRed" />
+                        <Button Content="{x:Static properties:Strings.TileSetApplyButtonLabel}"
+                                Command="{Binding ApplyTileSetChangesCommand}"
+                                HorizontalAlignment="Right"
+                                Width="140" />
+                    </StackPanel>
+                 </Expander>
+                <controls:TileListView Grid.Row="1" FontFamily="{Binding SelectedFontFamily}" />
+            </Grid>
             <GridSplitter Grid.Column="1"
                           Width="5"
                           HorizontalAlignment="Stretch"
