--- a/CSharpBible/Games/VTileEdit.WPF/Views/Controls/TileEditorView.xaml
+++ b/CSharpBible/Games/VTileEdit.WPF/Views/Controls/TileEditorView.xaml
@@ -2,7 +2,12 @@
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:properties="clr-namespace:VTileEdit.WPF.Properties"
-             xmlns:vm="clr-namespace:VTileEdit.WPF.ViewModels">
+             xmlns:vm="clr-namespace:VTileEdit.WPF.ViewModels"
+             xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
+             xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+             d:Width="600"
+             d:Height="400"
+             mc:Ignorable="d">
     <UserControl.Resources>
         <Style x:Key="GlyphButtonStyle" TargetType="Button">
             <Setter Property="Background" Value="Transparent" />
@@ -14,13 +19,16 @@
         </Style>
     </UserControl.Resources>
     <Grid>
-        <Grid.RowDefinitions>
-            <RowDefinition Height="*" />
-            <RowDefinition Height="Auto" />
-        </Grid.RowDefinitions>
-        <GroupBox Header="{x:Static properties:Strings.PreviewHeader}" Margin="0,0,0,8">
+        <Grid.ColumnDefinitions>
+            <ColumnDefinition Width="*" />
+            <ColumnDefinition Width="Auto" />
+        </Grid.ColumnDefinitions>
+        <GroupBox Header="{x:Static properties:Strings.PreviewHeader}">
             <ScrollViewer HorizontalScrollBarVisibility="Auto" VerticalScrollBarVisibility="Auto">
                 <ItemsControl ItemsSource="{Binding SelectedTile.Glyphs}">
+                    <ItemsControl.LayoutTransform>
+                        <ScaleTransform ScaleX="0.5" />
+                    </ItemsControl.LayoutTransform>
                     <ItemsControl.ItemsPanel>
                         <ItemsPanelTemplate>
                             <UniformGrid Columns="{Binding SelectedTile.TileWidth}" />
@@ -60,24 +68,15 @@
                 </ItemsControl>
             </ScrollViewer>
         </GroupBox>
-        <GroupBox Header="{x:Static properties:Strings.GlyphDetailsHeader}" Grid.Row="1">
-            <Grid Margin="8">
-                <Grid.ColumnDefinitions>
-                    <ColumnDefinition Width="Auto" />
-                    <ColumnDefinition Width="*" />
-                </Grid.ColumnDefinitions>
-                <Grid.RowDefinitions>
-                    <RowDefinition Height="Auto" />
-                    <RowDefinition Height="Auto" />
-                    <RowDefinition Height="Auto" />
-                </Grid.RowDefinitions>
-                <TextBlock Text="{x:Static properties:Strings.GlyphCharacterLabel}" Margin="0,0,12,8" VerticalAlignment="Center" />
+        <GroupBox Header="{x:Static properties:Strings.GlyphDetailsHeader}" Grid.Column="1">
+            <StackPanel Margin="8" Orientation="Vertical">
+                <TextBlock Text="{x:Static properties:Strings.GlyphCharacterLabel}" Margin="8,0,8,0" VerticalAlignment="Center" />
                 <TextBox Grid.Column="1"
                          Text="{Binding SelectedGlyph.CharacterText, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}"
                          FontFamily="{Binding SelectedFontFamily}"
                          FontSize="16"
                          HorizontalContentAlignment="Center" />
-                <TextBlock Grid.Row="1" Text="{x:Static properties:Strings.GlyphForegroundLabel}" Margin="0,0,12,8" VerticalAlignment="Center" />
+                <TextBlock Grid.Row="1" Text="{x:Static properties:Strings.GlyphForegroundLabel}" Margin="8,12,8,0" VerticalAlignment="Center" />
                 <ComboBox Grid.Row="1"
                           Grid.Column="1"
                           ItemsSource="{Binding Palette}"
@@ -96,7 +95,7 @@
                         </DataTemplate>
                     </ComboBox.ItemTemplate>
                 </ComboBox>
-                <TextBlock Grid.Row="2" Text="{x:Static properties:Strings.GlyphBackgroundLabel}" Margin="0,0,12,0" VerticalAlignment="Center" />
+                <TextBlock Grid.Row="2" Text="{x:Static properties:Strings.GlyphBackgroundLabel}" Margin="8,12,8,0" VerticalAlignment="Center" />
                 <ComboBox Grid.Row="2"
                           Grid.Column="1"
                           ItemsSource="{Binding Palette}"
@@ -115,7 +114,7 @@
                         </DataTemplate>
                     </ComboBox.ItemTemplate>
                 </ComboBox>
-            </Grid>
+            </StackPanel>
         </GroupBox>
     </Grid>
 </UserControl>
