--- a/CSharpBible/Games/VTileEdit.WPF/Views/Controls/TileListView.xaml
+++ b/CSharpBible/Games/VTileEdit.WPF/Views/Controls/TileListView.xaml
@@ -3,7 +3,11 @@
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:properties="clr-namespace:VTileEdit.WPF.Properties"
-             xmlns:vm="clr-namespace:VTileEdit.WPF.ViewModels">
+             xmlns:vm="clr-namespace:VTileEdit.WPF.ViewModels"
+             xmlns:converters="clr-namespace:VTileEdit.WPF.Converters">
+    <UserControl.Resources>
+        <converters:WidthToHeightConverter x:Key="WidthToHeightConverter" Ratio="2" />
+    </UserControl.Resources>
     <GroupBox Header="{x:Static properties:Strings.TileListHeader}">
         <Grid>
             <Grid.RowDefinitions>
@@ -17,12 +21,12 @@
                         Foreground="Gray" />
             <DockPanel Grid.Row="1" Margin="0,0,0,8">
                 <TextBlock Text="{x:Static properties:Strings.TileListFilterLabel}" VerticalAlignment="Center" Margin="0,0,8,0" />
-                <TextBox Width="200"
+                <TextBox 
                          Text="{Binding TileFilterText, UpdateSourceTrigger=PropertyChanged}" />
             </DockPanel>
             <ListBox Grid.Row="2"
                      ItemsSource="{Binding TilesView}"
-                     SelectedItem="{Binding SelectedTile}"
+                     SelectedItem="{Binding SelectedTile}"                     
                      ScrollViewer.VerticalScrollBarVisibility="Auto">
                 <ListBox.ItemsPanel>
                     <ItemsPanelTemplate>
@@ -31,9 +35,22 @@
                 </ListBox.ItemsPanel>
                 <ListBox.ItemTemplate>
                     <DataTemplate DataType="{x:Type vm:TileViewModel}">
-                        <StackPanel Width="140" Margin="0,0,8,8">
+                        <StackPanel Width="100" Margin="0,0,8,8">
                             <TextBlock Text="{Binding DisplayName}" FontWeight="Bold" />
                             <ItemsControl ItemsSource="{Binding Glyphs}">
+                                <ItemsControl.ItemContainerStyle>
+                                    <Style TargetType="ContentPresenter">
+                                        <Setter Property="HorizontalAlignment" Value="Stretch" />
+                                        <Setter Property="VerticalAlignment" Value="Stretch" />
+                                        <Setter Property="Height">
+                                            <Setter.Value>
+                                                <Binding Path="ActualWidth"
+                                                         RelativeSource="{RelativeSource Self}"
+                                                         Converter="{StaticResource WidthToHeightConverter}" />
+                                            </Setter.Value>
+                                        </Setter>
+                                    </Style>
+                                </ItemsControl.ItemContainerStyle>
                                 <ItemsControl.ItemsPanel>
                                     <ItemsPanelTemplate>
                                         <UniformGrid Columns="{Binding TileWidth}" />
@@ -44,12 +61,16 @@
                                         <Border Background="{Binding BackgroundBrush}"
                                                 BorderBrush="#22000000"
                                                 BorderThickness="0.5">
-                                            <TextBlock Text="{Binding Character}"
-                                                       Foreground="{Binding ForegroundBrush}"
-                                                       HorizontalAlignment="Center"
-                                                       VerticalAlignment="Center"
-                                                       FontFamily="{Binding DataContext.SelectedFontFamily, RelativeSource={RelativeSource AncestorType=Window}}"
-                                                       FontSize="10" />
+                                            <Viewbox Stretch="Uniform"
+                                                     HorizontalAlignment="Stretch"
+                                                     VerticalAlignment="Stretch">
+                                                <TextBlock Text="{Binding Character}"
+                                                           Foreground="{Binding ForegroundBrush}"
+                                                           HorizontalAlignment="Center"
+                                                           VerticalAlignment="Center"
+                                                           FontFamily="{Binding DataContext.SelectedFontFamily, RelativeSource={RelativeSource AncestorType=Window}}"
+                                                           FontSize="10" />
+                                            </Viewbox>
                                         </Border>
                                     </DataTemplate>
                                 </ItemsControl.ItemTemplate>
